--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,7 +12,7 @@ members = ["xtask"]
 [dependencies]
 anyhow = "1"
 async-trait = "0.1.51"
-bernard = { git = "https://github.com/m-rots/bernard-rs", branch = "main" }
+bernard = { git = "https://github.com/SimonGino/bernard-rs", branch = "main" }
 chrono = "0.4"
 clap = "3.0.0-beta.5"
 color-eyre = "0.5.11"
